# splash-core

./: .gitignore  .pre-commit-config.yaml  README.md  aiken.toml  blueprint.ts  cabal.project  cabal.project.onchain  config.json  flake.nix  plutus.json  plutus.ts
config/: config.ts  deploy.ts  lucid.ts  types.ts  wallet.ts
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.3/: package.cache  plutarch-validators-0.1.0.0-inplace.conf
docs/: LimitOrder.md
docs/stableswap/: SplashStablePool.md
lib/splash/: gen.ak  lovelace.ak  plutus.ak  rational.ak  value_ext.ak  witness.ak
lib/splash/orders/: spot.ak  types.ak
lib/splash/stableswap/: test_utils.ak  types.ak  utils.ak
lib/whalepools/: plutus.ak  rational.ak
lib/whalepools/stable3pool/: types.ak  utils.ak
lib/whalepools/tests/stable3pool/: pool_test.ak  templates.ak
plutarch-validators/: hie.yaml  lqLocl.plutus  plutarch-validators.cabal  pool.plutus  pool.uplc
plutarch-validators/PExtra/: API.hs  Integer.hs  Num.hs
plutarch-validators/WhalePoolsDex/: PConstants.hs  PMintingValidators.hs  PStakingValidators.hs  PValidators.hs
plutarch-validators/WhalePoolsDex/Contracts/: BalancePool.hs  Pool.hs  PoolBFee.hs  RoyaltyPool.hs  StablePool.hs
plutarch-validators/WhalePoolsDex/Contracts/Proxy/: Deposit.hs  DepositBalance.hs  FeeSwitch.hs  Order.hs  Redeem.hs  RedeemBalance.hs  RoyaltyWithdraw.hs  Swap.hs
plutarch-validators/WhalePoolsDex/PContracts/: PApi.hs  PAssets.hs  PBalancePool.hs  PBalancePoolDAOV1.hs  PDeposit.hs  PDepositBalance.hs  PDepositStable.hs  PDepositStableV1.hs  PDoubleRoyaltyDAOV1.hs  PDoubleRoyaltyDeposit.hs  PDoubleRoyaltyPool.hs  PDoubleRoyaltyRedeem.hs  PDoubleRoyaltyWithdrawOrder.hs  PDoubleRoyaltyWithdrawPool.hs  PFeeSwitch.hs  PFeeSwitchBFee.hs  PFeeSwitchBalancePool.hs  PMintingValidators.hs  POrder.hs  PPool.hs  PPoolBFee.hs  PPoolDAOV1.hs  PRedeem.hs  PRedeemBalance.hs  PRedeemStable.hs  PRedeemStableV1.hs  PRoyaltyDAOV1.hs  PRoyaltyDAOV1ActionOrder.hs  PRoyaltyDAOV1Request.hs  PRoyaltyDeposit.hs  PRoyaltyFeeSwitch.hs  PRoyaltyPool.hs  PRoyaltyRedeem.hs  PRoyaltyWithdrawContract.hs  PRoyaltyWithdrawOrder.hs  PRoyaltyWithdrawPool.hs  PSimpleStaking.hs  PStablePool.hs  PStablePoolV1.hs  PStakingWithPkhLock.hs  (+2 more)
plutarch-validators/test/: Eval.hs  Spec.hs
plutarch-validators/test/Tests/: Api.hs  BalancePool.hs  Deposit.hs  FeeSwitch.hs  FeeSwitchBFee.hs  Pool.hs  PoolBFee.hs  Redeem.hs  StakeMinting.hs  Staking.hs  Swap.hs
protocols/stable3pool/: Stable3PoolSpec.md
protocols/stable3pool/images/: .$stable3_deposit.svg.dtmp
validators/: beacon.ak  liquidity_locker.ak
validators/orders/: auction.ak  degen_order.ak  grid.ak  instant_order.ak  limit_order.ak  spot.ak
validators/orders/limit/: limit_order.ak
validators/orders/spot/: SpotOrder.md  native_to_token.ak  spot_order.ak
validators/stable3pool/: dao.ak  deposit.ak  pool.ak  redeem.ak  swap.ak
validators/stable_pool/: deposit.ak  pool.ak  proxy_dao.ak  redeem.ak  redeem_uniform.ak
validators/stable_pool/protocol/: Stable3PoolSpec.md
validators/stable_pools/t2t/: deposit_t2t.ak  pool_t2t.ak  pool_t2t_exact.ak  proxy_dao_t2t.ak  redeem_t2t.ak
validators/stable_pools/t2t2t/: deposit_t2t2t.ak  pool_t2t2t.ak  proxy_dao_t2t2t.ak  redeem_t2t2t.ak
validators/token/: inflation.ak
validators_v2/: plutus.json
validators_v2/lib/splash/: plutus.ak
validators_v2/lib/splash/orders/: types.ak
validators_v2/lib/splash/stableswap/: test_utils.ak
validators_v2/validators/: beacon.ak  liquidity_locker.ak
validators_v2/validators/orders/: grid.ak  instant_order.ak  limit_order.ak
validators_v2/validators/stable_pool/: redeem.ak
validators_v3/: aiken.toml  plutus.json
validators_v3/lib/splash/: plutus.ak  value_ext.ak
validators_v3/lib/splash/orders/: royalty_withdraw.ak
validators_v3/lib/splash/royalty_pool/: double_royalty_pool.ak  single_royalty_pool.ak
validators_v3/validators/royalty_pool/: double_royalty_withdraw_pool.ak  single_royalty_withdraw_pool.ak
